[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagittal_average"  
version = "0.1.0"          
description = "A package for sagittal average computations" 
authors = [
    { name = "xii", email = "xii159755@163.com" }  
]
dependencies = []

[tool.setuptools.packages.find]
include = ["sagittal_average", "sagittal_average.*"]

